--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,7 +30,7 @@ footer {
     display: flex;
     flex-direction: column;
     border-style: solid;
-    border-color: black;
+    border-color: rgb(0, 0, 0);
     border-width: 1px;
 }
 .quizTwo {
