--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,10 @@ footer {
     border-color: black;
     border-width: 1px;
 }
+.Axel-Button {
+    background-color: blue;
+}
+.Axel-Button::after {
+    background-color: rgb(0, 255, 55);
+    transition-duration: 50%;
+}
